# sled-hardware/types/src/lib.rs
@@ -95,3 +95,10 @@ impl std::fmt::Display for Baseboard {
         }
     }
 }
+
+#[derive(Clone, Copy, Debug)]
+pub enum CpuFamily {
+    Unknown,
+    AmdFamily19h,
+    AmdFamily1Ah,
+}
